// table, select the proper icon (see legend at the bottom of this documents)
// and adapt the link to point to your pull request. Please dont forget
// the empty line separators.

////
| 🎁🐛🐣🗑️✨
|
| https://github.com/knative/client/pull/[#]
////

## (Unreleased)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| ✨
| Add support for namespace for all commands that takes a --sink option
| https://github.com/knative/client/pull/1264[#1264]

| 🎁
| Add `--prune` & `--prune-all` options to delete the unreferenced revisions
| https://github.com/knative/client/pull/1217[#1217]

| ✨
| Update CRDs API version to `v1`
| https://github.com/knative/client/issues/1248[#1248]

| 🐛
| Fix kn export to always honor mode irrespective of revisions flag and have Export as the default mode
| https://github.com/knative/client/pull/1212[#1212]

| 🎁
| Add S column to specify built-in sources in kn source list-types
| https://github.com/knative/client/pull/1246[#1246]

| 🎁
| Add context.Context parameter to API function
| https://github.com/knative/client/pull/1274[#1274]

| 🎁
| Add `kn domain` commands to manage DomainMapping
| https://github.com/knative/client/pull/1267[#1267]

|===

## v0.21.0 (2021-02-23)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add `--context` and `--cluster` flags to choose specific context from kubeconfig
| https://github.com/knative/client/pull/1234[#1234]

| ✨
| Enable _errorlint_, _gosec_ and _unparam_ linter
| https://github.com/knative/client/pull/1223[#1223]

| 🐣
| Drop `pkg/errors` dependency and replace with stdlib usage
| https://github.com/knative/client/pull/1221[#1221]


| 🐣
| Making a `toReference` public to enable reuse from kn plugins
| https://github.com/knative/client/pull/1203[#1203]

| 🐣
| Do not print `serviceUID` and `configUID` labels in service export results
| https://github.com/knative/client/pull/1194[#1194]

| ✨