@@ -112,20 +112,22 @@ func NoopMessageCallback() MessageCallback {
 func (w *waitForReadyConfig) Wait(ctx context.Context, watcher watch.Interface, name string, options Options, msgCallback MessageCallback) (error, time.Duration) {
 
 	timeout := options.timeoutWithDefault()
-	floatingTimeout := timeout
+	timeoutTimer := time.NewTimer(timeout)
+	defer timeoutTimer.Stop()
 	for {
 		start := time.Now()
-		retry, timeoutReached, err := w.waitForReadyCondition(ctx, watcher, start, floatingTimeout, options.errorWindowWithDefault(), msgCallback)
+		retry, timeoutReached, err := w.waitForReadyCondition(ctx, watcher, start, timeoutTimer, options.errorWindowWithDefault(), msgCallback)
+
 		if err != nil {
 			return err, time.Since(start)
 		}
-		floatingTimeout = floatingTimeout - time.Since(start)
-		if timeoutReached || floatingTimeout < 0 {
+		if timeoutReached {
 			return fmt.Errorf("timeout: %s '%s' not ready after %d seconds", w.kind, name, int(timeout/time.Second)), time.Since(start)
 		}
 
 		if retry {
-			// restart loop
+			// sleep to prevent CPU pegging and restart the loop
+			time.Sleep(pollInterval)
 			continue
 		}
 		return nil, time.Since(start)
@@ -138,7 +140,9 @@ func (w *waitForReadyConfig) Wait(ctx context.Context, watcher watch.Interface, 
 // An errorWindow can be specified which takes into account of intermediate "false" ready conditions. So before returning
 // an error, this methods waits for the errorWindow duration and if an "True" or "Unknown" event arrives in the meantime
 // for the "Ready" condition, then the method continues to wait.
-func (w *waitForReadyConfig) waitForReadyCondition(ctx context.Context, watcher watch.Interface, start time.Time, timeout time.Duration, errorWindow time.Duration, msgCallback MessageCallback) (retry bool, timeoutReached bool, err error) {
+func (w *waitForReadyConfig) waitForReadyCondition(
+	ctx context.Context, watcher watch.Interface, start time.Time, timeoutTimer *time.Timer, errorWindow time.Duration, msgCallback MessageCallback,
+) (retry bool, timeoutReached bool, err error) {
 
 	// channel used to transport the error that has been received
 	errChan := make(chan error)
@@ -157,7 +161,7 @@ func (w *waitForReadyConfig) waitForReadyCondition(ctx context.Context, watcher 
 		select {
 		case <-ctx.Done():
 			return false, false, ctx.Err()
-		case <-time.After(timeout):
+		case <-timeoutTimer.C:
 			// We reached a timeout without receiving a "Ready" == "True" event
 			return false, true, nil
 		case err = <-errChan:
@@ -166,7 +170,8 @@ func (w *waitForReadyConfig) waitForReadyCondition(ctx context.Context, watcher 
 			return false, false, err
 		case event, ok := <-watcher.ResultChan():
 			if !ok || event.Object == nil {
-				return true, false, nil
+				// retry only if the channel is still open
+				return ok, false, nil
 			}
 
 			// Check whether resource is in sync already (meta.generation == status.observedGeneration)
@@ -239,7 +244,6 @@ func (w *waitForEvent) Wait(ctx context.Context, watcher watch.Interface, name s
 	timeout := options.timeoutWithDefault()
 	start := time.Now()
 	// channel used to transport the error
-	errChan := make(chan error)
 	timer := time.NewTimer(timeout)
 	defer timer.Stop()
 	for {
@@ -248,8 +252,6 @@ func (w *waitForEvent) Wait(ctx context.Context, watcher watch.Interface, name s
 			return ctx.Err(), time.Since(start)
 		case <-timer.C:
 			return fmt.Errorf("timeout: %s '%s' not ready after %d seconds", w.kind, name, int(timeout/time.Second)), time.Since(start)
-		case err := <-errChan:
-			return err, time.Since(start)
 		case event := <-watcher.ResultChan():
 			if w.eventDone(&event) {
 				return nil, time.Since(start)
